# AI_Based_Smart_Emotional_Healing_system

./: Dockerfile  README.md  app.py  grader.py  index.html  inference.py  model.py  my_env.py  openenv.yaml  openenv_api.py  pyproject.toml  requirements.txt
server/: app.py
