[project]
name = "emotion-support"
version = "1.0.0"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "opencv-python-headless",
    "numpy",
    "pillow",
    "torch",
    "torchvision",
    "ultralytics",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:app"
